libs/natparse/src/test/resources/projects/invalidModuleTypeTests/Natural-Libraries/ALIB/MYLDA.NSL
DEFINE DATA LOCAL
1 #VAR (A10)
END-DEFINE
